--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ ext {
 }
 
 dependencies {
+    implementation 'org.osmdroid:osmdroid-android:6.1.14'
     implementation 'com.mapbox.maps:android:11.0.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
